# termin_checker

./: .env.example  .gitignore  AWS_DEPLOYMENT.md  DEPLOYMENT.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  PROJECT_STATUS.md  README.md  TEST_RESULTS_SUMMARY.md  analyze_appointment_page.py  config.yaml  database.py  models.py  pyproject.toml  requirements.txt  test_all_services.py
docs/: improvement-roadmap.md  marketing-strategy.md  phase2-service-translations.md  telegraph-credentials.md
docs/superpowers/plans/: 2026-04-18-termin-bot.md  2026-04-19-premium-upsell-ads.md  2026-04-20-scheduler-dedup.md
docs/superpowers/specs/: 2026-04-18-termin-bot-design.md  2026-04-19-premium-upsell-ads-design.md
infra/ec2/: install.sh  termin-bot.service
src/: __init__.py
src/bot/: __init__.py  handlers.py  i18n.py  main.py  terms.py
src/core/: __init__.py  appointment_checker.py  database.py  models.py  schema_loader.py
src/services/: __init__.py  check_service.py  notification_service.py  scheduler.py  subscription_service.py  user_service.py
tests/: test_i18n.py  test_premium_upsell.py  test_schedule_windows.py  test_scheduler_dedup.py  test_schema_loader.py  test_terms.py
