[tool.poetry]
name = "termin-checker"
version = "0.1.0"
description = ""
authors = ["aerofeev"]
readme = "README.md"
packages = [{include = "termin_checker"}]

[tool.poetry.dependencies]
python = "^3.11"
playwright = "^1.55.0"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-playwright = "^0.5.0"
black = "^24.0.0"
ruff = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
